# lingmo-workspace

./: CMakeLists.txt
.github/workflows/: build.yml  package.yml  test.yml
debian/: changelog  control  copyright  rules
debian/source/: format
desktop/: desktopsettings.cpp  dockdbusinterface.cpp
rpm/: lingmo-workspace.spec
